게시글 작성시 해당 show 페이지로 이동

--- a/write.html
+++ b/write.html
@@ -149,7 +149,7 @@
         date: date
       });
       alert('저장 완료');
-      window.location.reload();
+      location.href = `./show.html?id=${id}`;
     } catch (error) {
       console.error("Error adding document: ", error);
     }
