--- a/show.html
+++ b/show.html
@@ -107,15 +107,14 @@
     import { getFirestore, collection, addDoc, getDocs, query, where, orderBy, doc, deleteDoc, setDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyDAEstAPrTLK7i9ryDBLy5yyKf9msmDdo8",
-      authDomain: "object-74938.firebaseapp.com",
-      databaseURL: "https://object-74938-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "object-74938",
-      storageBucket: "object-74938.appspot.com",
-      messagingSenderId: "330048303032",
-      appId: "1:330048303032:web:2f7e6c5e27823610c3294d",
-      measurementId: "G-FEFD4LMS9N"
-    };
+      apiKey: "AIzaSyB3ookWJ_UhcAQN3g_GFe8igPGrRhhSEPM",
+      authDomain: "object-4dce6.firebaseapp.com",
+      projectId: "object-4dce6",
+      storageBucket: "object-4dce6.appspot.com",
+      messagingSenderId: "1016569423981",
+      appId: "1:1016569423981:web:4742c10d53bc9ad4ef7764",
+      measurementId: "G-2ND0Q8WYC3"
+    };  
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
