메인 페이지 팀 소개란 작성

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
                 <h1>팀 소개</h1>
                 <div>
                     <ul>
-                        <li>팀 소개에 대해서 작성팀 소개에 대해서 작성팀 소개에 대해서 작성팀 소개에 대해서 작성</li>
-                        <li>팀 소개에 대해서 작성</li>
-                        <li>팀 소개에 대해서 작성</li>
+                        <li>오브젝트인줄 알았지만 오브젝T인 건에 대하여</li>
+                        <li>
+                            <div class="section-team-img">Ţ</div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -60,9 +61,10 @@
                 <h1>팀 목표</h1>
                 <div>
                     <ul>
-                        <li>팀 목표에 대해서 작성 해놓자</li>
-                        <li>팀 목표에 대해서 작성 해놓자</li>
-                        <li>팀 목표에 대해서 작성 해놓자</li>
+                        <li>목표했던 기능 다 구현하기</li>
+                        <li>기능 구현에 에러 생기지 않기</li>
+                        <li>모르는거 넘어가지 않고 질문하기</li>
+                        <li>튜터님들 한테 적극적으로 질문하기</li>
                     </ul>
                 </div>
             </div>
@@ -71,9 +73,11 @@
                 <h1>팀 규칙</h1>
                 <div>
                     <ul>
-                        <li>팀 규칙에 대해서 작성</li>
-                        <li>팀 규칙에 대해서 작성</li>
-                        <li>팀 규칙에 대해서 작성</li>
+                        <li>들어오면 항상 인사하기</li>
+                        <li>회의 시간 늦지 않기</li>
+                        <li>출석에 이상이 생기면 미리 알려주기</li>
+                        <li>자리를 비워야할 때 팀원에게 말하기</li>
+                        <li></li>
                     </ul>
                 </div>
             </div>
