게시글 작성시 메인 페이 보내기

--- a/write.html
+++ b/write.html
@@ -148,7 +148,7 @@
         date: date
       });
       alert('저장 완료');
-      location.href = `./show.html?id=${id}`;
+      location.href = "./index.html";
     } catch (error) {
       console.error("Error adding document: ", error);
     }
